# cargotest

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml  rust.yml
client_server/: Cargo.toml
client_server/proto/: helloworld.proto
client_server/src/client/: client.rs
client_server/src/server/: server.rs
shared-lib/: Cargo.toml
shared-lib/src/: lib.rs
